--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" /> -->
+    <meta charset="utf-8" />
     <meta
       name="Danira Cortez's Website"
       content="Danira Cortez's Website"
     />
     <title>Danira Cortez</title>
+    <link rel='logo icon' href='./big.png'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
