--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
       content="Danira Cortez's Website"
     />
     <title>Danira Cortez</title>
-    <link rel='logo icon' href='./circle.png'>
+    <link rel='logo icon' href='final.png'>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
