--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
       name="Danira Cortez's Website"
       content="Danira Cortez's Website"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    
     <title>Danira Cortez</title>
     <link rel='logo icon' href='final.png'>
   </head>
