1000hires video added

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     
     <title>Danira Cortez</title>
-    <description>Website created by Danira Cortez to showcase her projects, resume, and blog.</description>
+    <!-- <description>Website created by Danira Cortez to showcase her projects, resume, and blog.</description> -->
     <link rel='logo icon' href='final.png'>
 
     <meta property='og:url' content="https://daniracortez.com/">
