--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta itemprop="name" content='Danira Cortez'>
     <meta itemprop='description' content='Website created by Danira Cortez to showcase her projects, resume, and blog.'>
     <meta itemprop='image' content='Snapseed.JPG'/>
-    <image itemprop='image' content='Snapseed.JPG' alt='Danira'/>
+    <!-- <image itemprop='image' content='Snapseed.JPG' alt='Danira'/> -->
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
