--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,18 @@
     <meta property='og:image:width' content="1920">
     <meta property='og:image:height' content="1280">
     
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
+      <!-- font-family: 'Bad Script', cursive; -->
+    <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
+      <!-- font-family: 'Cedarville Cursive', cursive; -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Slab&display=swap" rel="stylesheet">
+      <!-- font-family: 'Josefin Slab', serif; -->
+    <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap" rel="stylesheet">
+      <!-- font-family: 'Mr De Haviland', cursive; -->
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
