--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Danira Cortez</title>
-    <link rel='logo icon' href='final.png'>
+    <link rel='logo icon' href='test.png'>
     <meta charset="utf-8" />
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
     <link rel='image_src' href='Snapseed.JPG'/>
