--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Danira Cortez</title>
     <link rel='logo icon' href='test.png'>
     <meta charset="utf-8" />
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel='image_src' href='Snapseed.JPG'/>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
